--- a/index.html
+++ b/index.html
@@ -374,10 +374,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h4>Associates of Arts - 2015</h4>
                 </div>
                 <div class="col-md-6 work-right">
-                    <h5><span class="glyphicon glyphicon-education"></span>Pierce Community College  
+                    <h5><span class="glyphicon glyphicon-education"></span><font color="white">Pierce Community College  
                          </h5>
                     <p>General study degree.
-                    Emphasis on chemistry</p>
+                    Emphasis on chemistry
+			    </font></p>
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -386,9 +387,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h4>Associates in Business - 2016</h4>
                 </div>
                 <div class="col-md-6 work-right">
-                    <h5><span class="glyphicon glyphicon-education"></span>Pierce Community College</h5>
-                    <p>
-                        Some of the required courses: Economincs, Accounting, Business Law.
+                    <h5><span class="glyphicon glyphicon-education"></span><font color="white">Pierce Community College</font></h5>
+                    <p><font color="white">
+			    Some of the required courses: Economincs, Accounting, Business Law.</font>
                     </p>
                 </div>
                 <div class="clearfix"> </div>
@@ -399,10 +400,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h4>Associates of Technology - 2017</h4>
                 </div>
                 <div class="col-md-6 work-right">
-                    <h5><span class="glyphicon glyphicon-education"> </span>Pierce Community College</h5>
-                    <p>
+                    <h5><span class="glyphicon glyphicon-education"> </span><font color="white">Pierce Community College</font></h5>
+                    <p><font color="white">
                         Some required courses: Business Analytics, Python Programming, Sql Programming, C# Programming, Database Analytics.
-                    </p>
+			    </font>
+			    </p>
                 </div>
                 <div class="clearfix"> </div>
             </div>
